--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pre Entrega 1</h1>
-    <h2>Validador de contraseña</h2>
+    <h2>Validador de contraseña y carrito</h2>
     <script src="code.js"></script>
 </body>
 </html>
