agregue diseño html, storage y json

--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./estilo.css">
 </head>
+
 <body>
-    <h1>Pre Entrega 1</h1>
-    <h2>Validador de contraseña y carrito</h2>
-    <script src="code.js"></script>
+    <header>
+        <section class="titulo">
+            <h1>TIENDA</h1>
+        </section>
+        <nav>
+            <section class="carrito">
+                <div>
+                    <a href=""><img src="./img/carrito.png" alt="carritoDeCompras"></a>
+                    <a href=""><h3>0</h3></a>
+                </div>
+            </section>
+        </nav>
+    </header>
+
+    <main>
+        <section class="zapas">
+            <div>
+                <img src="./img/zapa1.webp" alt="">
+                <button>+</button>
+            </div>
+            <div>
+                <img src="./img/zapa2.webp" alt="">
+                <button>+</button>
+            </div>
+            <div>
+                <img src="./img/zapa3.webp" alt="">
+                <button>+</button>
+            </div>
+        </section>
+        <section class="remeras">
+            <div>
+                <img src="./img/reme1.webp" alt="">
+                <button>+</button>
+            </div>
+            <div>
+                <img src="./img/reme2.webp" alt="">
+                <button>+</button>
+            </div>
+            <div>
+                <img src="./img/reme3.webp" alt="">
+                <button>+</button>
+            </div>
+        </section>
+    </main>
+
+    <!--<script src="code.js"></script>-->
+
 </body>
+
 </html>
