corregí algunos errores de codigo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section class="contenedor-productos
             carrito-escondido">
                 <section class="nuevos-productos">
-                    <div class="carrito-productos">
+                    <div class="carrito-productos  hidden-info">
                         <div class="info-productos">
                             <span class="cantidad-productos">1</span>
                             <p class="titulo-productos">Airforce 1 Black</p>
@@ -44,10 +44,11 @@
                     </div>
                 </section>
             
-                <div class="carrito-total">
+                <div class="carrito-total hidden">
                     <h3>Total:</h3>
                     <span class="totalPagar"></span>
                 </div>
+                <p class="carrito-vacio">El carrito está vacío</p>
             </section>
         </nav>
     </header>
